# alg-fabbri-IPRJ-UERJ

./: .gitignore  README.md
alg/: CMakeLists.txt
alg/graph/: CMakeLists.txt  dynagraph-condensed.c  dynagraph.c  dynagraph.h  dynamic_graph_celio.c  graph-visualizer.html  tree.cpp  tree.h
alg/graph/benchmark/: CMakeLists.txt  bm-graph.cpp  bm_tree.cpp
alg/graph/cmd/: CMakeLists.txt  dynagraph-cmd.c  tree-cmd.cpp
alg/graph/tests/: CMakeLists.txt  run-graph-tests  run-graph-tests[1]_include.cmake  run-graph-tests[1]_tests.cmake  test-graph.cpp  test-tree.cpp
alg/list/: BigStringNew.cpp  CMakeLists.txt  circular_linked_list.cpp  circular_linked_list.h  doubly_linked_list.cpp  doubly_linked_list.h  linked_list.cpp  linked_list.h
alg/list/benchmark/: CMakeLists.txt  bm_linked_list.cpp
alg/list/cmd/: CMakeLists.txt  circular_linked_list-cmd.cpp  doubly_linked_list-cmd.cpp  linked_list-cmd.cpp
alg/list/tests/: CMakeLists.txt  run-list-tests  run-list-tests[1]_include.cmake  run-list-tests[1]_tests.cmake  test-linked-list.cpp
alg/maze/: a.out
alg/merge/: sorted_merge_3way.cpp
alg/sort/: CMakeLists.txt  sort-char.cpp  sort-char.h
alg/sort/benchmark/: CMakeLists.txt  bm-sort-char  bm-sort-char.json  (+1 more)
alg/sort/tests/: CMakeLists.txt  run-sort-tests  run-sort-tests[1]_include.cmake  run-sort-tests[1]_tests.cmake  test-sort-char.cpp
aulas/aula-pratica3/: README.md
aulas/aula-pratica4/: README.md
aulas/aula-pratica5/: README.md
aulas/aula-pratica6/: README.md
aulas/aula-praticaN/: README.md
aulas/aula-praticaN+1/: README.md
dev/bench/: data.js
(+2 files in other folders)
